# Haskell_finance

./: README.md
basic-finance/: basic-finance.cabal  stack.yaml
basic-finance/app/: Main.hs
basic-finance/data/: AAPL+GOOG+MSFT_nab.csv
basic-finance/src/: Lib.hs
basic-finance/test/: Spec.hs
